--- a/templates/swagger.html
+++ b/templates/swagger.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>{{ .title }} - Swagger UI</title>
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@3/swagger-ui.css">
-    <script src="https://unpkg.com/swagger-ui-dist@3/swagger-ui-bundle.js" charset="UTF-8"></script>
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@4.6.1/swagger-ui.css">
+    <script src="https://unpkg.com/swagger-ui-dist@4.6.1/swagger-ui-bundle.js" charset="UTF-8" crossorigin></script>
+    <script src="https://unpkg.com/swagger-ui-dist@4.6.1/swagger-ui-standalone-preset.js" crossorigin></script>
 </head>
 <body>
 <div id="swagger-ui"></div>
@@ -15,7 +16,9 @@
         dom_id: '#swagger-ui',
         presets: [
             SwaggerUIBundle.presets.apis,
+            SwaggerUIStandalonePreset
         ],
+        layout: "StandaloneLayout",
         persistAuthorization: true,
         ...options
     })
